# sangatna

./: .gitignore  CONTEXT.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 099bd4eb5beb_add_utility_connections_table.py  0a9c59ace805_create_facilities_table.py  5b9ec68d782f_create_all_core_esg_tables.py  934216f6d983_create_companies_and_users_tables.py  b27068d90abd_add_production_records_table.py  b467ce910120_add_consultant_clients_table.py  f72f9d529da7_create_reports_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  brsr.py  companies.py  consultants.py  documents.py  emissions.py  energy.py  facilities.py  production.py  utility_connections.py  water_quality.py  water_quantity.py
backend/app/models/: company.py  document.py  emission.py  energy.py  facility.py  production.py  report.py  user.py  utility_connection.py  water_quality.py  water_quantity.py
backend/app/reference_data/compliance_standards/: bis_10500.json  cpcb_effluent.json
backend/app/schemas/: auth.py  company.py  document.py  emission.py  energy.py  facility.py  production.py  report.py  water_quantity.py
backend/app/services/: __init__.py  auth_service.py  company_service.py  consultant_service.py  document_matching_service.py  emission_service.py  energy_service.py  facility_service.py  production_service.py  utility_connection_service.py  water_quantity_service.py
backend/app/utils/: financial_year.py  storage.py
frontend/: package-lock.json
(+26 files in other folders)
