[project]
name = "sangatna-backend"
version = "0.1.0"
description = "SANGATNA — AI-powered ESG platform for MSMEs"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "anthropic>=0.28",
  "celery>=5.4",
  "redis>=5.0",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "boto3>=1.34",
  "pgvector>=0.3",
  "pandas>=2.2",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "greenlet>=3.5.1",
  "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
